--- a/EverywhereHouseController/res/layout-large/main_menu_view.xml
+++ b/EverywhereHouseController/res/layout-large/main_menu_view.xml
@@ -3,144 +3,129 @@
 	 xmlns:android="http://schemas.android.com/apk/res/android"
 	 android:id="@+id/drawer_layout"
 	 android:layout_width="match_parent"
-	 android:layout_height="match_parent" >
+	 android:layout_height="match_parent">
 	 
-	<RelativeLayout
-	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent"
-	    android:background="@color/White"
-	    android:gravity="top|bottom|left|right|center"
-	    android:paddingBottom="@dimen/activity_vertical_margin"
-	    android:paddingLeft="@dimen/activity_horizontal_margin"
-	    android:paddingRight="@dimen/activity_horizontal_margin"
-	    android:paddingTop="@dimen/activity_vertical_margin" >
-		    
-	    <LinearLayout
-	        android:id="@+id/linearLayout1"
-	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent"
-	        android:layout_alignParentLeft="true"
-	        android:layout_alignParentTop="true"
-	        android:orientation="vertical" >
+	 
+	 <RelativeLayout	android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/White"
+    android:gravity="top|bottom|left|right|center"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
-	        <RelativeLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="359dp" >
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical" >
 
-	            <ImageView
-	                android:id="@+id/world_loading_view"
-	                android:layout_width="300dp"
-	                android:layout_height="180dp"
-	                android:layout_centerHorizontal="true"
-	                android:layout_marginTop="25dp"
-	                android:src="@drawable/world_ehc" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="199dip"
+            android:layout_weight="0.57" >
 
-	            <ImageView
-	                android:id="@+id/word_ehc"
-	                android:layout_width="300dp"
-	                android:layout_height="180dp"
-	                android:layout_centerHorizontal="true"
-	                android:layout_marginTop="30dp"
-	                android:src="@drawable/word_ehc" />
+            <ImageView
+                android:id="@+id/world_loading_view"
+                android:layout_width="210dp"
+                android:layout_height="130dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="30dp"
+                android:src="@drawable/world_ehc" />
 
-	            <ImageView
-	                android:id="@+id/WeatherImage1"
-	                android:layout_width="120dp"
-	                android:layout_height="120dp"
-	                android:layout_alignRight="@+id/WeatherImage3"
-	                android:layout_alignTop="@+id/word_ehc"
-	                android:layout_marginRight="27dp"
-	                android:layout_marginTop="39dp" />
+            <ImageView
+                android:id="@+id/word_ehc"
+                android:layout_width="210dp"
+                android:layout_height="130dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="36dp"
+                android:src="@drawable/word_ehc" />
 
-	            <ImageView
-	                android:id="@+id/WeatherImage2"
-	                android:layout_width="120dp"
-	                android:layout_height="120dp"
-	                android:layout_alignParentRight="true"
-	                android:layout_alignTop="@+id/WeatherImage1"
-	                android:layout_marginRight="44dp" />
+            <TextView
+                android:id="@+id/temperature"
+                android:layout_width="90dp"
+                android:layout_height="84dp"
+                android:layout_below="@+id/word_ehc"
+                android:layout_centerHorizontal="true"
+                android:text="ºC"
+                android:textColor="@color/GreenApp"
+                android:textSize="40sp" />
 
-	            <TextView
-	                android:id="@+id/temperature"
-	                android:layout_width="140dp"
-	                android:layout_height="100dp"
-	                android:layout_alignBottom="@+id/WeatherImage3"
-	                android:layout_alignTop="@+id/WeatherImage3"
-	                android:layout_toLeftOf="@+id/WeatherImage4"
-	                android:text="ºC"
-	                android:textColor="@color/GreenApp"
-	                android:textSize="60sp" />
+            <ImageView
+                android:id="@+id/WeatherImage4"
+                android:layout_width="101dp"
+                android:layout_height="108dp"
+                android:layout_alignTop="@+id/WeatherImage5"
+                android:layout_toRightOf="@+id/temperature" />
 
-	            <ImageView
-	                android:id="@+id/WeatherImage3"
-	                android:layout_width="100dp"
-	                android:layout_height="100dp"
-	                android:layout_below="@+id/word_ehc"
-	                android:layout_marginRight="60dp"
-	                android:layout_toLeftOf="@+id/temperature" />
+            <ImageView
+                android:id="@+id/WeatherImage2"
+                android:layout_width="101dp"
+                android:layout_height="108dp"
+                android:layout_alignBottom="@+id/word_ehc"
+                android:layout_alignLeft="@+id/WeatherImage4" />
 
-	            <ImageView
-	                android:id="@+id/WeatherImage5"
-	                android:layout_width="90dp"
-	                android:layout_height="90dp"
-	                android:layout_alignRight="@+id/WeatherImage3"
-	                android:layout_alignTop="@+id/WeatherImage4" />
+            <ImageView
+                android:id="@+id/WeatherImage1"
+                android:layout_width="101dp"
+                android:layout_height="108dp"
+                android:layout_above="@+id/temperature"
+                android:layout_toLeftOf="@+id/temperature" />
 
-	            <ImageView
-	                android:id="@+id/WeatherImage4"
-	                android:layout_width="90dp"
-	                android:layout_height="90dp"
-	                android:layout_alignBottom="@+id/world_loading_view"
-	                android:layout_alignLeft="@+id/WeatherImage2"
-	                android:layout_marginBottom="25dp" />
+            <ImageView
+                android:id="@+id/WeatherImage5"
+                android:layout_width="101dp"
+                android:layout_height="108dp"
+                android:layout_alignLeft="@+id/WeatherImage1"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="21dp" />
 
-	        </RelativeLayout>
+            <ImageView
+                android:id="@+id/WeatherImage3"
+                android:layout_width="78dp"
+                android:layout_height="84dp"
+                android:layout_alignBottom="@+id/temperature"
+                android:layout_alignLeft="@+id/WeatherImage1"
+                android:layout_marginBottom="30dp" />
 
-	        <RelativeLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="match_parent"
-	            android:layout_marginTop="30dp" >
+        </RelativeLayout>
 
-	            <Button
-	                android:id="@+id/buttonManagement"
-	                android:layout_width="wrap_content"
-	                android:layout_height="80dp"
-	                android:layout_alignParentLeft="true"
-	                android:layout_alignParentRight="true"
-	                android:layout_alignParentTop="true"
-	                android:background="@drawable/button_config2"
-	                android:text="Management"
-	                android:textColor="@drawable/button_text_color3"
-	                android:textSize="40sp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="401dp" >
 
-	            <Button
-	                android:id="@+id/buttonConfig"
-	                android:layout_width="wrap_content"
-	                android:layout_height="80dp"
-	                android:layout_alignParentBottom="true"
-	                android:layout_alignParentLeft="true"
-	                android:layout_alignParentRight="true"
-	                android:background="@drawable/button_config2"
-	                android:text="Configuration"
-	                android:textColor="@drawable/button_text_color3"
-	                android:textSize="40sp" />
+            <TableLayout
+                android:id="@+id/TableLayout1"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true" >
 
-	            <Button
-	                android:id="@+id/buttonEvents"
-	                android:layout_width="240dp"
-	                android:layout_height="80dp"
-	                android:layout_alignParentLeft="true"
-	                android:layout_alignParentRight="true"
-	                android:layout_centerVertical="true"
-	                android:background="@drawable/button_config2"
-	                android:text="Tasks"
-	                android:textColor="@drawable/button_text_color3"
-	                android:textSize="40sp" />
+                <Button
+                    android:id="@+id/buttonManagement"
+                    android:layout_width="wrap_content"
+                    android:layout_height="80dip"
+                    android:background="@drawable/button_config2"
+                    android:text="Management"
+                    android:textColor="@drawable/button_text_color3"
+                    android:textSize="30sp" />
 
-	        </RelativeLayout>
-	    </LinearLayout>
+                <Button
+                    android:id="@+id/buttonEvents"
+                    android:layout_width="120dip"
+                    android:layout_height="80dip"
+                    android:background="@drawable/button_config2"
+                    android:text="Tasks"
+                    android:textColor="@drawable/button_text_color3"
+                    android:textSize="30sp" />
+            </TableLayout>
+        </RelativeLayout>
+    </LinearLayout>
 
-	</RelativeLayout>
+</RelativeLayout>
 
 	<ListView
 	    android:id="@+id/ListViewSlidingMenu"
@@ -149,4 +134,4 @@
 	    android:layout_gravity="left"
 	    android:background="@color/GreenApp" />
  
-</android.support.v4.widget.DrawerLayout>
+  </android.support.v4.widget.DrawerLayout>
