--- a/EverywhereHouseController/res/layout-small/main_menu_view.xml
+++ b/EverywhereHouseController/res/layout-small/main_menu_view.xml
@@ -3,137 +3,127 @@
 	 xmlns:android="http://schemas.android.com/apk/res/android"
 	 android:id="@+id/drawer_layout"
 	 android:layout_width="match_parent"
-	 android:layout_height="match_parent" >
+	 android:layout_height="match_parent">
+	 
+	 
+	 <RelativeLayout	android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/White"
+    android:gravity="top|bottom|left|right|center"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
-	<RelativeLayout
-	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent"
-	    android:background="@color/White"
-	    android:gravity="top|bottom|left|right|center"
-	    android:paddingBottom="@dimen/activity_vertical_margin"
-	    android:paddingLeft="@dimen/activity_horizontal_margin"
-	    android:paddingRight="@dimen/activity_horizontal_margin"
-	    android:paddingTop="@dimen/activity_vertical_margin" >
-		    
-	    <LinearLayout
-	        android:id="@+id/linearLayout1"
-	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent"
-	        android:layout_alignParentLeft="true"
-	        android:layout_alignParentTop="true"
-	        android:orientation="vertical" >
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical" >
 
-	        <RelativeLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="180dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="140dp" >
 
-	            <ImageView
-	                android:id="@+id/world_loading_view"
-	                android:layout_width="200dp"
-	                android:layout_height="120dp"
-	                android:layout_centerHorizontal="true"
-	                android:layout_marginTop="25dp"
-	                android:src="@drawable/world_ehc" />
+            <ImageView
+                android:id="@+id/world_loading_view"
+                android:layout_width="140dp"
+                android:layout_height="70dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="12dp"
+                android:src="@drawable/world_ehc" />
 
-	            <ImageView
-	                android:id="@+id/word_ehc"
-	                android:layout_width="200dp"
-	                android:layout_height="120dp"
-	                android:layout_centerHorizontal="true"
-	                android:layout_marginTop="30dp"
-	                android:src="@drawable/word_ehc" />
+            <ImageView
+                android:id="@+id/word_ehc"
+                android:layout_width="140dp"
+                android:layout_height="70dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="15dp"
+                android:src="@drawable/word_ehc" />
 
-	            <TextView
-	                android:id="@+id/temperature"
-	                android:layout_width="70dp"
-	                android:layout_height="70dp"
-	                android:layout_below="@+id/word_ehc"
-	                android:layout_centerHorizontal="true"
-	                android:text="ºC"
-	                android:textColor="@color/GreenApp"
-	                android:textSize="30sp" />
+            <TextView
+                android:id="@+id/temperature"
+                android:layout_width="45dp"
+                android:layout_height="35dp"
+                android:layout_below="@+id/word_ehc"
+                android:layout_centerHorizontal="true"
+                android:text="ºC"
+                android:textColor="@color/GreenApp"
+                android:textSize="30sp" />
 
-	            <ImageView
-	                android:id="@+id/WeatherImage3"
-	                android:layout_width="70dp"
-	                android:layout_height="70dp"
-	                android:layout_alignParentBottom="true"
-	                android:layout_toLeftOf="@+id/temperature" />
+            <ImageView
+                android:id="@+id/WeatherImage2"
+                android:layout_width="58dp"
+                android:layout_height="46dp"
+                android:layout_alignBottom="@+id/word_ehc"
+                android:layout_alignLeft="@+id/WeatherImage4" />
 
-	            <ImageView
-	                android:id="@+id/WeatherImage2"
-	                android:layout_width="90dp"
-	                android:layout_height="90dp"
-	                android:layout_alignParentRight="true"
-	                android:layout_alignTop="@+id/WeatherImage1" />
+            <ImageView
+                android:id="@+id/WeatherImage1"
+                android:layout_width="58dp"
+                android:layout_height="46dp"
+                android:layout_above="@+id/temperature"
+                android:layout_toLeftOf="@+id/temperature" />
 
-	            <ImageView
-	                android:id="@+id/WeatherImage4"
-	                android:layout_width="90dp"
-	                android:layout_height="90dp"
-	                android:layout_alignTop="@+id/WeatherImage5"
-	                android:layout_toRightOf="@+id/temperature" />
+            <ImageView
+                android:id="@+id/WeatherImage4"
+                android:layout_width="58dp"
+                android:layout_height="46dp"
+                android:layout_below="@+id/world_loading_view"
+                android:layout_toRightOf="@+id/temperature" />
 
-	            <ImageView
-	                android:id="@+id/WeatherImage1"
-	                android:layout_width="90dp"
-	                android:layout_height="90dp"
-	                android:layout_above="@+id/WeatherImage3"
-	                android:layout_alignParentLeft="true" />
+            <ImageView
+                android:id="@+id/WeatherImage5"
+                android:layout_width="58dp"
+                android:layout_height="46dp"
+                android:layout_alignLeft="@+id/WeatherImage1"
+                android:layout_alignTop="@+id/temperature" />
 
-	            <ImageView
-	                android:id="@+id/WeatherImage5"
-	                android:layout_width="90dp"
-	                android:layout_height="90dp"
-	                android:layout_alignParentBottom="true"
-	                android:layout_marginBottom="17dp"
-	                android:layout_toLeftOf="@+id/temperature" />
-	        </RelativeLayout>
+            <ImageView
+                android:id="@+id/WeatherImage3"
+                android:layout_width="45dp"
+                android:layout_height="35dp"
+                android:layout_alignLeft="@+id/WeatherImage1"
+                android:layout_below="@+id/world_loading_view" />
 
-	        <RelativeLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="128dp"
-	            android:layout_marginTop="10dp" >
+        </RelativeLayout>
 
-	            <Button
-	                android:id="@+id/buttonConfig"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_alignParentBottom="true"
-	                android:layout_alignParentLeft="true"
-	                android:layout_alignParentRight="true"
-	                android:background="@drawable/button_config2"
-	                android:text="Configuration"
-	                android:textColor="@drawable/button_text_color3"
-	                android:textSize="10sp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
 
-	            <Button
-	                android:id="@+id/buttonEvents"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_alignParentLeft="true"
-	                android:layout_alignParentRight="true"
-	                android:layout_centerVertical="true"
-	                android:background="@drawable/button_config2"
-	                android:text="Tasks"
-	                android:textColor="@drawable/button_text_color3"
-	                android:textSize="10sp" />
+            <TableLayout
+                android:id="@+id/TableLayout1"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true" >
 
-	            <Button
-	                android:id="@+id/buttonManagement"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_alignParentLeft="true"
-	                android:layout_alignParentRight="true"
-	                android:layout_alignParentTop="true"
-	                android:background="@drawable/button_config2"
-	                android:text="Management"
-	                android:textColor="@drawable/button_text_color3"
-	                android:textSize="10sp" />
-	        </RelativeLayout>
-	    </LinearLayout>
+                <Button
+                    android:id="@+id/buttonManagement"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dip"
+                    android:background="@drawable/button_config2"
+                    android:text="Management"
+                    android:textColor="@drawable/button_text_color3"
+                    android:textSize="20sp" />
 
-	</RelativeLayout>
+                <Button
+                    android:id="@+id/buttonEvents"
+                    android:layout_width="120dip"
+                    android:layout_height="50dip"
+                    android:background="@drawable/button_config2"
+                    android:text="Tasks"
+                    android:textColor="@drawable/button_text_color3"
+                    android:textSize="20sp" />
+            </TableLayout>
+
+        </RelativeLayout>
+    </LinearLayout>
+
+</RelativeLayout>
 
 	<ListView
 	    android:id="@+id/ListViewSlidingMenu"
@@ -142,4 +132,4 @@
 	    android:layout_gravity="left"
 	    android:background="@color/GreenApp" />
  
-</android.support.v4.widget.DrawerLayout>
+  </android.support.v4.widget.DrawerLayout>
