--- a/EverywhereHouseController/res/layout-small/activity_main.xml
+++ b/EverywhereHouseController/res/layout-small/activity_main.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:id="@+id/calendar1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:background="@color/GreenApp"
         android:orientation="vertical" >
 
@@ -43,10 +43,9 @@
 
     <ListView
         android:id="@+id/eventList"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:background="@color/GreenApp" >
-
     </ListView>
 
 </LinearLayout>
