--- a/EverywhereHouseController/res/layout-xlarge/forgot_password_dialog.xml
+++ b/EverywhereHouseController/res/layout-xlarge/forgot_password_dialog.xml
@@ -13,7 +13,7 @@
         android:hint="User"
         android:lines="1"
         android:singleLine="true"
-        android:textSize="25sp" >
+        android:textSize="40sp" >
 
         <requestFocus />
     </EditText>
@@ -26,27 +26,27 @@
 
         <Button
             android:id="@+id/ExitButton"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
+            android:layout_width="390dp"
+            android:layout_height="60dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="10dp"
             android:background="@drawable/button_config"
             android:text="Exit"
             android:textColor="@drawable/button_text_color2"
-            android:textSize="15sp" />
+            android:textSize="30sp" />
 
         <Button
             android:id="@+id/SendButton"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
+            android:layout_width="390dp"
+            android:layout_height="60dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:layout_marginRight="10dp"
             android:background="@drawable/button_config"
             android:text="Send"
             android:textColor="@drawable/button_text_color2"
-            android:textSize="15sp" />
+            android:textSize="30sp" />
 
     </RelativeLayout>
 
