--- a/EverywhereHouseController/res/layout/group_item.xml
+++ b/EverywhereHouseController/res/layout/group_item.xml
@@ -13,7 +13,7 @@
         android:gravity="center_vertical|center_horizontal"
         android:paddingLeft="30dp"
         android:textColor="@drawable/button_text_color"
-        android:textSize="12pt"
+        android:textSize="20sp"
         android:typeface="monospace" />
 
     <ImageView
