[ADDED]		 New items. [MODIFIED] 	 Item's identification.

--- a/EverywhereHouseController/res/layout-large/create_user.xml
+++ b/EverywhereHouseController/res/layout-large/create_user.xml
@@ -14,7 +14,7 @@
             android:background="@color/Black" >
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/state"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
