--- a/EverywhereHouseController/res/layout-large/create_event_dialog.xml
+++ b/EverywhereHouseController/res/layout-large/create_event_dialog.xml
@@ -11,7 +11,7 @@
         android:background="@color/Black" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
