--- a/EverywhereHouseController/res/layout/controller_item.xml
+++ b/EverywhereHouseController/res/layout/controller_item.xml
@@ -3,6 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+
+    <TextView
+        android:id="@+id/state"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="TextView"
+        android:textColorHint="@color/White" />
     
     <TextView
         android:id="@+id/childname"
