--- a/EverywhereHouseController/res/layout/event_fragment.xml
+++ b/EverywhereHouseController/res/layout/event_fragment.xml
@@ -89,7 +89,7 @@
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
