--- a/EverywhereHouseController/res/layout/boolean_item.xml
+++ b/EverywhereHouseController/res/layout/boolean_item.xml
@@ -8,7 +8,8 @@
         android:id="@+id/childname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/White" />
 
     <Button android:text="Button"
         android:id="@+id/boolean_value"
