--- a/EverywhereHouseController/res/layout/controller_item.xml
+++ b/EverywhereHouseController/res/layout/controller_item.xml
@@ -11,6 +11,7 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal|center_vertical"
         android:text="TextView"
+        android:textColor="@color/White"
         android:textColorHint="@color/White" />
     
     <TextView
