--- a/EverywhereHouseController/res/layout/integer_item.xml
+++ b/EverywhereHouseController/res/layout/integer_item.xml
@@ -4,11 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <TextView 
+    <TextView
         android:id="@+id/childname"
-        android:layout_gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textColor="@color/White" />
     
 		<Button
 		    android:id="@+id/integer_value"
