--- a/EverywhereHouseController/res/layout-large/profile_view.xml
+++ b/EverywhereHouseController/res/layout-large/profile_view.xml
@@ -54,7 +54,7 @@
 
     <ImageButton
         android:id="@+id/UserImage"
-        android:layout_width="300dp"
+        android:layout_width="fill_parent"
         android:layout_height="300dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
