--- a/EverywhereHouseController/res/layout/boolean_item.xml
+++ b/EverywhereHouseController/res/layout/boolean_item.xml
@@ -11,13 +11,15 @@
         android:layout_gravity="center_horizontal"
         android:textColor="@color/White" />
 
-    <Button android:text="Button"
+    <Button
         android:id="@+id/boolean_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
         android:background="@drawable/button_config"
-        android:textColor="@drawable/button_text_color" >
+        android:text="Button"
+        android:textColor="@drawable/button_text_color"
+        android:textSize="20sp" >
 
     </Button>
 
