--- a/EverywhereHouseController/res/layout/real_item.xml
+++ b/EverywhereHouseController/res/layout/real_item.xml
@@ -4,15 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <TextView
-        android:id="@+id/childname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textColor="@color/White" />
-    
 		<TextView
-		    android:id="@+id/integer_value"
+		    android:id="@+id/real_value"
 		    android:layout_width="wrap_content"
 		    android:layout_height="50dp"
 		    android:layout_gravity="center_horizontal"
