--- a/EverywhereHouseController/res/layout-large/create_event_dialog.xml
+++ b/EverywhereHouseController/res/layout-large/create_event_dialog.xml
@@ -34,27 +34,38 @@
         android:layout_gravity="center_horizontal"
         android:ems="10"
         android:hint="@string/event_name"
+        android:layout_marginBottom="10dp"
+        android:background="@color/White"
         android:singleLine="true" />
 
     <Spinner
         android:id="@+id/sp_item"
+        android:background="@color/White"
+        android:dropDownSelector="@color/White"
+        android:popupBackground="@color/White"        
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal" />
 
     <Spinner
         android:id="@+id/sp_action"
+        android:background="@color/White"
+        android:popupBackground="@color/White"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal" />
 
     <TextView
         android:id="@+id/tv_date"
+        android:textColor="@color/White"
+        android:background="@color/GreenApp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal"
         android:text="No date selected"
-        android:textColor="@color/White"
         android:textSize="30sp" />
 
     <Button
@@ -70,11 +81,13 @@
 
     <TextView
         android:id="@+id/tv_time"
+        android:textColor="@color/White"
+        android:background="@color/GreenApp"
         android:layout_width="wrap_content"
+        android:layout_marginBottom="10dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="No time selected"
-        android:textColor="@color/White"
         android:textSize="30sp" />
 
     <Button
