--- a/EverywhereHouseController/res/layout-small/create_event_dialog.xml
+++ b/EverywhereHouseController/res/layout-small/create_event_dialog.xml
@@ -27,6 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10dp"
+        android:background="@color/White"
         android:ems="10"
         android:hint="@string/event_name"
         android:singleLine="true"
@@ -35,22 +37,31 @@
     <Spinner
         android:id="@+id/sp_item"
         android:layout_width="wrap_content"
+        android:popupBackground="@color/White"
+        android:dropDownSelector="@color/White"
+        android:layout_marginBottom="10dp"
+        android:background="@color/White"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" />
 
     <Spinner
         android:id="@+id/sp_action"
         android:layout_width="wrap_content"
+        android:popupBackground="@color/White"
+        android:background="@color/White"
+        android:layout_marginBottom="10dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" />
 
     <TextView
         android:id="@+id/tv_date"
+        android:textColor="@color/White"
+        android:background="@color/GreenApp"
         android:layout_width="wrap_content"
+        android:layout_marginBottom="10dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="No date selected"
-        android:textColor="@color/White"
         android:textSize="20sp" />
 
     <Button
@@ -66,11 +77,13 @@
 
     <TextView
         android:id="@+id/tv_time"
+        android:layout_marginBottom="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="No time selected"
         android:textColor="@color/White"
+        android:background="@color/GreenApp"
         android:textSize="20sp" />
 
     <Button
