[FIXED] Logout in HouseMenu view.

--- a/EverywhereHouseController/res/layout/houses_menu_view.xml
+++ b/EverywhereHouseController/res/layout/houses_menu_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/LinearLayout1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -9,18 +8,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="138dp" >
-
-        <ImageButton
-            android:id="@+id/HouseImageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:background="@color/GreenApp"
-            android:src="@drawable/white_house_icon" />
+        android:layout_height="134dp" >
 
         <CheckBox
             android:id="@+id/HouseCheckBox"
@@ -29,17 +17,25 @@
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/HouseImageButton" />
 
+        <ImageButton
+            android:id="@+id/HouseImageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:background="@color/GreenApp"
+            android:src="@drawable/white_house_icon" />
+
     </RelativeLayout>
 
     <ListView
         android:id="@+id/HousesListView"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="341dp"
         android:background="@color/GreenApp"
         android:clickable="true"
         android:scrollingCache="true"
         android:smoothScrollbar="true" >
-
     </ListView>
 
 </LinearLayout>
